style.css
/* ... */
.btn-primary:is(:hover, :focus) {
  background-color: var(--white);
  color: var(--coquelicot);
  box-shadow: var(--shadow-2);
}

.btn-secondary {
  background-color: var(--white);
  color: var(--coquelicot);
}

.btn-secondary:is(:hover, :focus) { background-color: var(--rich-black-fogra-29-1); }

.w-100 { width: 100%; }

.circle,
.abs-img { position: absolute; }

.circle {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -56%);
  width: 100%;
  z-index: -1;
  animation: rotate360 15s linear infinite;
}

@keyframes rotate360 {
  0% { transform: translate(-50%, -56%) rotate(0); }
  100% { transform: translate(-50%, -56%) rotate(1turn); }
}

.circle-2 { animation-direction: reverse; }

.hero-subtitle,
.section-subtitle {
  font-family: var(--ff-catamaran);
  font-weight: var(--fw-700);
  text-transform: uppercase;
  max-width: max-content;
}

.section-subtitle {
  background-color: var(--coquelicot_10);
  color: var(--coquelicot);
  padding: 8px 20px;
  border-radius: var(--radius-8);
}

.section-title { margin-block: 18px 35px; }

.btn-link {
  --color: var(--white);

  color: var(--color);
  font-size: var(--fs-6);
  font-weight: var(--fw-500);
  text-transform: uppercase;
  max-width: max-content;
  transition: var(--transition-1);
}

.btn-link::before {
  bottom: 0;
  left: 0;
  width: 100%;
  height: 2px;
  background-color: var(--color);
  transition: var(--transition-1);
}

.btn-link:is(:hover, :focus) { --color: var(--coquelicot); }

.text-center { text-align: center; }

.img-holder {
  aspect-ratio: var(--width) / var(--height);
  background-color: var(--light-gray);
  overflow: hidden;
}

.img-cover {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.has-scrollbar {
  display: flex;
  gap: 25px;
  overflow-x: auto;
  padding-block-end: 30px;
  scroll-snap-type: inline mandatory;
}

.scrollbar-item {
  min-width: 100%;
  scroll-snap-align: start;
}

.has-scrollbar::-webkit-scrollbar { height: 10px; }

.has-scrollbar::-webkit-scrollbar-track,
.has-scrollbar::-webkit-scrollbar-thumb { border-radius: 50px; }

.has-scrollbar::-webkit-scrollbar-thumb:hover { background-color: var(--coquelicot); }

.has-scrollbar::-webkit-scrollbar-button { width: calc(25% - 25px); }





/*-----------------------------------*\
  #HEADER
\*-----------------------------------*/

.header .btn { display: none; }

.header {
  background-color: var(--black);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding-block: 10px;
  box-shadow: var(--shadow-1);
  z-index: 4;
}

.header > .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  color: var(--white);
  font-family: var(--ff-catamaran);
  font-size: 3.5rem;
  font-weight: var(--fw-900);
  display: flex;
  align-items: center;
  margin-inline-start: -8px;
}

.logo-text-desktop {
  display: none;
}

.logo-text-mobile {
  display: block;
}

@media (min-width: 575px) {
  .logo-text-desktop {
    display: block;
  }

  .logo-text-mobile {
    display: none;
  }
}

.logo ion-icon {
  color: var(--coquelicot);
  font-size: 40px;
  transform: rotate(90deg) translate(-2px, -5px);
}

.nav-open-btn {
  background-color: var(--coquelicot);
  padding: 20px 15px;
  border-radius: var(--radius-8);
}

.nav-open-btn .line {
  background-color: var(--white);
  width: 30px;
  height: 3px;
}

.nav-open-btn .line:not(:last-child) { margin-block-end: 6px; }

.nav-open-btn .line:nth-child(2) {
  width: 25px;
  margin-inline-start: auto;
}

.navbar {
  background-color: var(--coquelicot);
  color: var(--white);
  position: fixed;
  top: 100%;
  left: 0;
  width: 100%;
  height: 100%;
  display: grid;
  place-content: center;
  visibility: hidden;
  transition: 0.25s var(--cubic-in);
  z-index: 10;
}

.navbar.active {
  visibility: visible;
  transform: translateY(-100%);
  transition: 0.5s var(--cubic-out);
}

.nav-close-btn {
  position: absolute;
  top: 10px;
  right: 15px;
  background-color: var(--rich-black-fogra-29-1);
  color: var(--white);
  font-size: 40px;
  padding: 10px;
  border-radius: var(--radius-8);
}

.navbar-link {
  font-family: var(--ff-catamaran);
  font-size: var(--fs-4);
  text-align: center;
  padding-block: 10px;
  margin-block-end: 20px;
  transition: var(--transition-1);
}

.navbar-link:is(:hover, :focus, .active) { color: var(--rich-black-fogra-29-1); }





/*-----------------------------------*\
  #HERO
\*-----------------------------------*/

.hero {
  color: var(--cadet-gray);
  text-align: center;
  padding-block-start: calc(var(--section-padding) + 80px);
  padding-block-end: 0;
  overflow: hidden;
}

.hero::after {
  bottom: 0;
  left: 0;
  width: 100%;
  height: 240px;
  background-color: var(--coquelicot);
  z-index: -1;
}

.hero-content { margin-block-end: 90px; }

.hero-subtitle {
  background-color: var(--white_10);
  color: var(--white);
  margin-inline: auto;
  padding: 5px;
  padding-inline-end: 15px;
  border-radius: var(--radius-8);
}

.hero-subtitle .strong {
  display: inline-block;
  background-color: var(--coquelicot);
  padding: 2px 15px;
  margin-inline-end: 15px;
  border-radius: var(--radius-5);
}

.hero-title { margin-block: 30px 8px; }

.hero .section-text { margin-block-end: 40px; }

.hero .btn { margin-inline: auto; }

.hero-banner { position: relative; }

.abs-img-1 {
  top: 20px;
  right: -50px;
  width: 190px;
}

.abs-img-2 {
  bottom: -50px;
  left: -40px;
  width: 280px;
}

.hero .abs-img { animation: move 3s linear infinite alternate; }

@keyframes move {
  0% { transform: translate(0, 0); }
  50% { transform: translate(-5px, 10px); }
  100% { transform: translate(5px, 20px); }
}

.hero .abs-img-2 { animation-direction: alternate-reverse; }





/*-----------------------------------*\
  #ABOUT
\*-----------------------------------*/

.about { overflow: hidden; }

.about-banner { margin-block-end: 50px; }
/* ... */

